--- a/public/asset/frontend/view/cart/cart.html
+++ b/public/asset/frontend/view/cart/cart.html
@@ -23,10 +23,10 @@
                 <tbody>
                     <tr>
                         <td>
-                            <a href="/detail/[[product.image[0].product_id]]">
+                            <a href="/detail/[[product.id]]">
                                 <img src="[[product.image[0].image_url]]" alt="[[product.name]]" width="127" >
                             </a>
-                            <a href="/detail/[[product.image[0].product_id]]">[[product.name]]</a>
+                            <a href="/detail/[[product.id]]">[[product.name]]</a>
                         <td>
                         </td>
                         <td>
