--- a/public/asset/frontend/view/city.html
+++ b/public/asset/frontend/view/city.html
@@ -79,7 +79,7 @@
                             <h2 class="cbp-vm-title">[[item.name]]</h2>
                             <div class="cbp-vm-price">[[item.price]]</div>
                             <div class="cbp-vm-details">[[item.description]]</div>
-                            <a class="cbp-vm-icon cbp-vm-add" href="/detail/[[item.image[0].product_id]]">Add to cart</a>
+                            <a class="cbp-vm-icon cbp-vm-add" href="/detail/[[item.id]]">Add to cart</a>
                         </li>
                     </ul>
                 </div>
