--- a/public/asset/frontend/css/style.css
+++ b/public/asset/frontend/css/style.css
@@ -768,6 +768,52 @@ footer ul {
 }
 
 /**
+ * Checkout
+ */
+
+.form_title {
+    position: relative;
+    padding-left: 55px;
+    margin-bottom: 10px
+}
+.form_title h3 strong {
+    background-color: #e04f67;
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 40px;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top: 0
+}
+.form_title h3 {
+    margin: 0;
+    padding: 0
+}
+.form_title p {
+    color: #999;
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    line-height: 14px
+}
+.step {
+    border-left: 1px solid #ddd;
+    padding: 20px 0 20px 31px;
+    margin: 0 0 10px 20px
+}
+.step.noborder {
+    border-left-color: transparent;
+}
+
+/**
  * Button
  */
 
@@ -839,7 +885,6 @@ footer ul {
     background: #85c99d;
     cursor: pointer;
     padding: 12px 20px;
-    display: inline-block;
     outline: none;
     font-size: 12px;
     -webkit-transition: all .3s;
@@ -854,7 +899,32 @@ footer ul {
     text-align: center;
     margin-bottom: 10px
 }
-.btn_book:hover {
+
+.btn_checkout {
+    border: none;
+    font-family: inherit;
+    font-size: inherit;
+    color: #fff;
+    background: #85c99d;
+    cursor: pointer;
+    padding: 12px 20px;
+    outline: none;
+    font-size: 12px;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 10px;
+    text-decoration: none;
+}
+.btn_book:hover,
+.btn_checkout:hover {
     background: #333;
     text-decoration: none;
     color: #fff;
