--- a/public/asset/frontend/views/cart/cart.html
+++ b/public/asset/frontend/views/cart/cart.html
@@ -1,19 +1,19 @@
 <section class="order-header">
     <div class="title animated fadeInDown">
-        <h1>Proses Order</h1>
+        <h1>Order</h1>
         <div class="bs-wizard">
             <div class="col-xs-4 bs-wizard-step active">
-                <div class="text-center bs-wizard-stepnum">Informasi</div>
+                <div class="text-center bs-wizard-stepnum">Cart</div>
                 <div class="progress"><div class="progress-bar"></div></div>
                 <a href="/cart/" class="bs-wizard-dot"></a>
             </div>             
             <div class="col-xs-4 bs-wizard-step disabled">
-                <div class="text-center bs-wizard-stepnum">Pembayaran</div>
+                <div class="text-center bs-wizard-stepnum">Checkout</div>
                 <div class="progress"><div class="progress-bar"></div></div>
                 <a href="#" class="bs-wizard-dot"></a>
             </div>
             <div class="col-xs-4 bs-wizard-step disabled">
-                <div class="text-center bs-wizard-stepnum">Konfirmasi</div>
+                <div class="text-center bs-wizard-stepnum">Confirm</div>
                 <div class="progress"><div class="progress-bar"></div></div>
                 <a href="#" class="bs-wizard-dot"></a>
             </div>  
@@ -37,26 +37,29 @@
                 <table class="table table-striped cart-list margin_bottom_30">
                     <thead>
                         <tr>
-                            <th colspan="2">Item</th>
-                            <th></th>
+                            <th class="text-center">Item</th>
+                            <th class="text-center">Option</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="item in order">
+                        <tr ng-if="!cart">
+                            <td colspan="2" class="text-center">Data kosong. Silahkan melakukan pemesanan.</td>
+                        </tr> 
+                        <tr ng-if="cart">
                             <td>
                                 <div class="thumb_cart">
                                     <img src="[[item.thumbnail]]" alt="[[item.name]]">
                                 </div>
                                 <span class="item_cart">[[item.name]]<br /> [[item.address]], [[item.area_name]], [[item.city_name]]</span>
                             </td>
-                            <td class="options">
-                                <a href="#"><i class="ion-close"></i></a>
+                            <td class="options text-center">
+                                <a href="#" ng-click="remove()"><i class="ion-close"></i></a>
                             </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <div class="table-responsive">
+            <div class="table-responsive" ng-if="cart">
                 <table class="table table-striped options_cart">
                     <thead>
                         <tr>
@@ -69,9 +72,9 @@
                                 <i class="ion-waterdrop"></i>
                             </td>
                             <td style="width:60%">
-                                Kebersihan <strong>+Rp. 100.000</strong>
+                                Kebersihan <strong>+Rp. 0</strong>
                             </td>
-                            <td style="width:35%"><input type="checkbox" /></td>
+                            <td class="text-center" style="width:35%;"><input type="checkbox" /></td>
                         </tr>
                     </tbody>
                 </table>
@@ -81,54 +84,59 @@
         <aside class="col-md-4">
             <div class="box_booking">
                 <h3>- Ringkasan -</h3>
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" class="form-control" datepicker-popup="dd-MMMM-yyyy" ng-model="dateStart" ng-click="openDateStart($event)" is-open="statusDateStart.opened" min-date="minDateStart" max-date="maxDate" datepicker-options="dateOptions" ng-change="selectDateStart(dateStart)" ng-required="true" close-text="Close" />
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-default" ng-click="openDateStart($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                                </span>
+                <div ng-if="cart">
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" datepicker-popup="dd-MMMM-yyyy" ng-model="dateStart" ng-click="openDateStart($event)" is-open="statusDateStart.opened" min-date="minDateStart" max-date="maxDate" datepicker-options="dateOptions" ng-change="selectDateStart(dateStart)" ng-required="true" close-text="Close" />
+                                    <span class="input-group-btn">
+                                        <button type="button" class="btn btn-default" ng-click="openDateStart($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" class="form-control" datepicker-popup="dd-MMMM-yyyy" ng-model="dateEnd" ng-click="openDateEnd($event)" is-open="statusDateEnd.opened" min-date="minDateEnd" max-date="maxDate" datepicker-options="dateOptions" ng-change="selectDateEnd(dateEnd)" ng-required="true" close-text="Close" />
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-default" ng-click="openDateEnd($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                                </span>
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" datepicker-popup="dd-MMMM-yyyy" ng-model="dateEnd" ng-click="openDateEnd($event)" is-open="statusDateEnd.opened" min-date="minDateEnd" max-date="maxDate" datepicker-options="dateOptions" ng-change="selectDateEnd(dateEnd)" ng-required="true" close-text="Close" />
+                                    <span class="input-group-btn">
+                                        <button type="button" class="btn btn-default" ng-click="openDateEnd($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <br>
+                    <div class="table-responsive">
+                        <table class="table table_summary">
+                            <tbody>
+                            <tr>
+                                <td>Hari</td>
+                                <td class="text-right"><input type="hidden" id="cart_day" ng-model="cart.day" />[[cart.day]]</td>
+                            </tr>
+                            <tr>
+                                <td>Bulan</td>
+                                <td class="text-right"><input type="hidden" id="cart_month" ng-model="cart.month" />[[cart.month]]</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td class="text-right">[[ cart.month + 'x IDR ' + item.price_format]]</td>
+                            </tr>
+                            <tr class="total">
+                                <td>Total</td>
+                                <td class="text-right">[[ 'IDR ' + ( (cart.month * item.price | number:0) | comma2decimal) ]]</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <button class="btn_book" ng-click="checkout()">Checkout</button>
                 </div>
-                <br>
-                <div class="table-responsive">
-                    <table class="table table_summary">
-                        <tbody>
-                        <tr>
-                            <td>Hari</td>
-                            <td class="text-right"><input type="hidden" id="cart_day" ng-model="cart.day" />[[cart.day]]</td>
-                        </tr>
-                        <tr>
-                            <td>Bulan</td>
-                            <td class="text-right"><input type="hidden" id="cart_month" ng-model="cart.month" />[[cart.month]]</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td class="text-right">[[ cart.month + 'x IDR ' + item.price_format]]</td>
-                        </tr>
-                        <tr class="total">
-                            <td>Total</td>
-                            <td class="text-right">[[ 'IDR ' + ( (cart.month * item.price | number:0) | comma2decimal) ]]</td>
-                        </tr>
-                        </tbody>
-                    </table>
+                <div ng-if="!cart">
+                    <div class="text-center">Data kosong silahkan melakukan pemesanan.</div>
                 </div>
-                <button class="btn_book" ng-click="payment()">Pembayaran</button>
             </div>
         </aside>
     </div>
