--- a/public/asset/frontend/views/cart/confirm.html
+++ b/public/asset/frontend/views/cart/confirm.html
@@ -1,21 +1,21 @@
 <section class="order-header">
     <div class="title animated fadeInDown">
-        <h1>Proses Order</h1>
+        <h1>Order</h1>
         <div class="bs-wizard">
             <div class="col-xs-4 bs-wizard-step complete">
-                <div class="text-center bs-wizard-stepnum">Informasi</div>
+                <div class="text-center bs-wizard-stepnum">Cart</div>
                 <div class="progress"><div class="progress-bar"></div></div>
-                <a href="/cart" class="bs-wizard-dot"></a>
+                <a href="/cart/" class="bs-wizard-dot"></a>
             </div>             
             <div class="col-xs-4 bs-wizard-step complete">
-                <div class="text-center bs-wizard-stepnum">Pembayaran</div>
+                <div class="text-center bs-wizard-stepnum">Checkout</div>
                 <div class="progress"><div class="progress-bar"></div></div>
-                <a href="/payment" class="bs-wizard-dot"></a>
+                <a href="/checkout/" class="bs-wizard-dot"></a>
             </div>
             <div class="col-xs-4 bs-wizard-step active">
-                <div class="text-center bs-wizard-stepnum">Konfirmasi</div>
+                <div class="text-center bs-wizard-stepnum">Confirm</div>
                 <div class="progress"><div class="progress-bar"></div></div>
-                <a href="/confirm" class="bs-wizard-dot"></a>
+                <a href="/confirm/" class="bs-wizard-dot"></a>
             </div>  
         </div> 
     </div> 
@@ -25,7 +25,7 @@
     <div class="container">
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="/cart/">Cart</a></li>
+            <li><a href="/confirm/">Confirm</a></li>
         </ul>
     </div>
 </div>
@@ -35,18 +35,82 @@
         <div class="col-md-8">
             <div class="form_title">
                 <h3>Konfirmasi Pembayaran</h3>
-                <p>
-                    Silahkan melakukan pembayaran ke nomor di bawah ini
-                </p>
+                <p>Lorem Ipsum</p>
             </div>
+            
+            <div class="step noborder">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <label>Invoice</label>
+                            <input type="text" id="invoice" ng-model="confirm.invoice" class="form-control">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <label>Nominal</label>
+                            <input type="text" id="nominal" ng-model="confirm.nominal" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <label>Tanggal Pembayaran</label>
+                            <input type="text" id="date" ng-model="confirm.date" class="form-control">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <label>Rekening Tujuan</label>
+                            <input type="text" id="account_to" ng-model="confirm.account_to" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <label>Rekening Pengirim</label>
+                            <input type="text" id="account_from" ng-model="confirm.account_from" class="form-control">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <label>Bank Pengirim</label>
+                            <input type="text" id="account_from_bank" ng-model="confirm.account_from_bank" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <label>Nama Pengirim</label>
+                            <input type="text" id="account_from_name" ng-model="confirm.account_from_name" class="form-control">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Keterangan</label>
+                    <textarea id="description" ng-model="confirm.description" class="form-control"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <button class="btn_checkout" ng-click="confirmProcess()">Konfirmasi Pembayaran</button>
+                </div>
+
+            </div>
+
         </div>
         
         <aside class="col-md-4">
             <div class="box_booking">
-                <h3>- Terima Kasih -</h3>
-                <p>Nihil inimicus ex nam, in ipsum dignissim duo. Tale principes interpretaris vim ei, has posidonium definitiones ut. Duis harum fuisset ut his, duo an dolor epicuri appareat.</p>
+                <h3>- Pembayaran -</h3>
+                <p>Silahkan melakukan pembayaran ke</p>
                 <hr />
-                <button class="btn_invoice" ng-click="invoice()">Invoice</button>
             </div>
         </aside>
     </div>
